syntax = "proto3";
package contact;

option go_package = "./contact";

// 联系人列表接口请求参数
message ContactListRequest {}

// 联系人列表接口响应参数
message ContactListResponse {
  message Item {
    int32 user_id = 1;         // 用户ID
    string username = 2;       // 用户名
    string nickname = 3;       // 昵称
    int32 gender = 4;          // 性别[0:未知;1:男;2:女;]
    string motto = 5;          // 座右铭
    string avatar = 6;         // 头像
    int32 group_id = 7;        // 联系人分组ID
    string online_status = 8;  // 在线状态[0:离线;1:在线;...]
  }

  repeated Item items = 1;
}

// 删除联系人
message ContactDeleteRequest {
  int32 friend_id = 1; // 好友ID
}
message ContactDeleteResponse {}

// 联系人详情
message ContactDetailRequest {
  int32 friend_id = 1;
}
message ContactDetailResponse {
  int32 user_id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  string motto = 5;
  int32 gender = 6;
  int32 relation = 7;   // [0:陌生人;1:好友;...]
  int32 group_id = 8;
  string birthday = 9;
}

// 联系人搜索
message ContactSearchRequest {
  string keyword = 1;
}
message ContactSearchResponse {
  message Item {
    int32 user_id = 1;
    string username = 2;
    string nickname = 3;
    string avatar = 4;
    int32 gender = 5;
    string motto = 6;
  }
  repeated Item items = 1;
}

// 更换联系人分组
message ContactChangeGroupRequest {
  int32 friend_id = 1;
  int32 group_id = 2;
}
message ContactChangeGroupResponse {}

// 创建好友申请
message ContactApplyRequest {
  int32 friend_id = 1;
  string message = 2;
}
message ContactApplyResponse {}

// 同意好友申请
message ContactAgreeRequest {
  int32 apply_id = 1;
}
message ContactAgreeResponse {}

// 拒绝好友申请
message ContactRejectRequest {
  int32 apply_id = 1;
  string remark = 2;
}
message ContactRejectResponse {}

// 申请列表
message ContactApplyListRequest {}
message ContactApplyListResponse {
  message Item {
    int32 apply_id = 1;
    int32 user_id = 2;
    int32 friend_id = 3;
    string message = 4;
    string username = 5;
    string nickname = 6;
    string apply_time = 7;
  }
  repeated Item items = 1;
}

// 未读申请数
message ContactApplyUnreadRequest {}
message ContactApplyUnreadResponse {
  int32 count = 1;
}

// 创建分组
message ContactGroupCreateRequest {
  string name = 1; // 分组名称
}
message ContactGroupCreateResponse {
  int32 group_id = 1; // 新分组ID
}

// 更新分组
message ContactGroupUpdateRequest {
  int32 group_id = 1; // 分组ID
  string name = 2;    // 新分组名称
}
message ContactGroupUpdateResponse {}

// 删除分组
message ContactGroupDeleteRequest {
  int32 group_id = 1; // 分组ID
}
message ContactGroupDeleteResponse {}

// 联系人分组列表
message ContactGroupListRequest {}
message ContactGroupListResponse {
  message Item {
    int32 group_id = 1; // 分组ID
    string name = 2;    // 分组名称
    int32 count = 3;    // 联系人数
  }
  repeated Item items = 1;
}

// 联系人分组详情
message ContactGroupDetailRequest {
  int32 group_id = 1; // 分组ID
}
message ContactGroupDetailResponse {
  int32 group_id = 1; // 分组ID
  string name = 2;    // 分组名称
  int32 count = 3;    // 联系人数
  repeated ContactListResponse.Item contacts = 4; // 联系人列表
}

// 联系人服务定义
service ContactService {
  rpc List(ContactListRequest) returns (ContactListResponse);
  rpc Delete(ContactDeleteRequest) returns (ContactDeleteResponse);
  rpc Detail(ContactDetailRequest) returns (ContactDetailResponse);
  rpc Search(ContactSearchRequest) returns (ContactSearchResponse);
  rpc ChangeGroup(ContactChangeGroupRequest) returns (ContactChangeGroupResponse);
  rpc Apply(ContactApplyRequest) returns (ContactApplyResponse);
  rpc Agree(ContactAgreeRequest) returns (ContactAgreeResponse);
  rpc Reject(ContactRejectRequest) returns (ContactRejectResponse);
  rpc ApplyList(ContactApplyListRequest) returns (ContactApplyListResponse);
  rpc ApplyUnread(ContactApplyUnreadRequest) returns (ContactApplyUnreadResponse);
  rpc GroupCreate(ContactGroupCreateRequest) returns (ContactGroupCreateResponse);
  rpc GroupUpdate(ContactGroupUpdateRequest) returns (ContactGroupUpdateResponse);
  rpc GroupDelete(ContactGroupDeleteRequest) returns (ContactGroupDeleteResponse);
  rpc GroupList(ContactGroupListRequest) returns (ContactGroupListResponse);
  rpc GroupDetail(ContactGroupDetailRequest) returns (ContactGroupDetailResponse);

}
